--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -4,10 +4,10 @@
   width: 100%;
   @include flex-center;
   margin-bottom: 76px;
-  padding: 82px 0 0;
+  padding: 60px 0 0;
 
   &.compact {
-    margin-bottom: 54px;
+    margin-bottom: 44px;
   }
 
   // Responsive adjustment for short desktop screens
